#Init code for rn 0.64

--- a/example/package.json
+++ b/example/package.json
@@ -23,9 +23,9 @@
     "expo-linking": "~2.2.1",
     "expo-updates": "~0.5.3",
     "koa": "^2.13.0",
-    "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react": "~17.0.1",
+    "react-native": "~0.64.0",
     "react-native-appearance": "~0.3.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-pager-view": "~5.0.12",
